# linux_freertos_openamp_qemu_virt_cortex_a53_a57

./: CMakeLists.txt  linker.ld  startup_backup.S
Source/: CMakeLists_backup
Source/include/: CMakeLists_backup
Source/portable/: CMakeLists_backup
Source/portable/GCC/: CMakeLists.txt
Source/portable/GCC/ARM_CA57_64_BIT/: CMakeLists_backup
Source/portable/MemMang/: CMakeLists_backup
include/: CMakeLists_backup
